fix: broken css styles

--- a/public/styles/add-category.css
+++ b/public/styles/add-category.css
@@ -1,7 +1,1 @@
 @import "./partials/form.css";
-
-.add-category__title {
-  font-size: var(--fs-600);
-  padding: 1em;
-  border: 1px solid var(--clr-neutral-600);
-}
