--- a/public/styles/developer.css
+++ b/public/styles/developer.css
@@ -52,7 +52,9 @@
 }
 
 .developer__title {
-  font-size: var(--fs-700);
+  font-family: var(--ff-title);
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-600);
   line-height: 1.2;
   text-shadow: 2px 5px 5px hsla(0, 0%, 0%, 1);
 }
@@ -90,5 +92,9 @@
 @media (min-width: 40em) {
   .developer__body {
     font-size: var(--fs-600);
+  }
+
+  .developer__title {
+    font-size: var(--fs-700);
   }
 }
